Homepage content is filled. Responsive is applied

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,11 @@
 :root {
   --primary-color: #233142;
   --secondary-color: #e16428;
-  --background-color: #edfffa;
+  --background-color: linear-gradient(
+    109.6deg,
+    rgb(0, 0, 0) 11.2%,
+    rgb(11, 132, 145) 91.1%
+  );
   --heading-font-family: "Bree Serif", serif;
   --primary-font-family: "Fjalla One", sans-serif;
   --secondary-font-family: "Rubik", sans-serif;
@@ -11,6 +15,8 @@ h1 {
   font-family: var(--heading-font-family);
   font-size: 76px;
   margin: 0 0 8px;
+  color: white;
+  line-height: 1;
 }
 
 h2 {
@@ -18,12 +24,26 @@ h2 {
   font-size: 52px;
   font-weight: bold;
   color: var(--primary-color);
+  color: white;
 }
 h3 {
   font-family: var(--secondary-font-family);
   color: var(--primary-color);
   font-size: 34px;
+  color: white;
 }
+h4 {
+  font-size: 40px;
+}
+p {
+  line-height: 2;
+  display: flex;
+  justify-content: start;
+}
+img {
+  width: 400px;
+}
+
 .hero {
   background: var(--background-color);
   padding: 160px 20px;
@@ -31,9 +51,9 @@ h3 {
 }
 button {
   font-family: var(--heading-font-family);
+  font-size: 18px;
   color: white;
   background: var(--secondary-color);
-  font-size: 25px;
   padding: 20px 10px;
   border-radius: 15px;
   border: solid var(--secondary-color) 1px;
@@ -42,4 +62,33 @@ button {
 button:hover {
   color: var(--secondary-color);
   background: white;
+}
+.project-definition {
+  margin: 10px auto;
+  margin-top: 80px;
+}
+
+.section-line {
+  color: #0d3e44;
+}
+
+@media (max-width: 1000px) {
+  h1 {
+    font-size: 70px;
+  }
+  h2 {
+    font-size: 60px;
+  }
+  h3 {
+    font-size: 25px;
+  }
+
+  .image-column {
+    text-align: center;
+    display: block;
+  }
+  .project-definition {
+    margin: 40px;
+    text-align: center;
+  }
 }
