--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -57,13 +57,13 @@ button {
   padding: 20px 20px;
   border-radius: 15px;
   border: solid var(--secondary-color) 1px;
-  margin: 20px 10px;
+  margin: 20px 0;
 }
 button:hover {
   color: var(--secondary-color);
   background: white;
 }
-.project-definition {
+.definition {
   margin: 10px auto;
   margin-top: 80px;
 }
@@ -80,16 +80,23 @@ button:hover {
   }
   h2 {
     font-size: 60px;
+
+    margin-bottom: 20px;
   }
   h3 {
     font-size: 25px;
+    text-align: center;
   }
   .image-column {
     text-align: center;
     display: block;
   }
-  .project-definition {
+  .definition {
     margin: 20px;
     text-align: center;
+  }
+  .about-text {
+    text-align: center;
+    margin-bottom: 20px;
   }
 }
