--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -35,6 +35,7 @@ h3 {
 h4 {
   font-size: 40px;
 }
+
 p {
   line-height: 2;
   display: flex;
@@ -71,6 +72,9 @@ button:hover {
 }
 
 @media (max-width: 1000px) {
+  .hero {
+    line-height: 1.2;
+  }
   h1 {
     font-size: 70px;
   }
@@ -94,5 +98,18 @@ button:hover {
   .about-text {
     text-align: center;
     margin-bottom: 20px;
+  }
+  img {
+    text-align: center;
+    padding: 20px;
+  }
+  .projects-main-heading {
+    font-size: 35px;
+    line-height: 1.5;
+    padding: 0 20px 0 20px;
+  }
+  .project-headings {
+    text-align: center;
+    margin-bottom: 0;
   }
 }
