Updated projects page content

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,7 +16,7 @@ h1 {
   font-size: 76px;
   margin: 0 0 8px;
   color: white;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 h2 {
@@ -44,7 +44,9 @@ p {
 img {
   width: 400px;
 }
-
+strong {
+  color: var(--secondary-color);
+}
 .hero {
   background: var(--background-color);
   padding: 160px 20px;
@@ -52,7 +54,7 @@ img {
 }
 button {
   font-family: var(--heading-font-family);
-  font-size: 18px;
+  font-size: 20px;
   color: white;
   background: var(--secondary-color);
   padding: 20px 20px;
@@ -65,27 +67,36 @@ button:hover {
   background: white;
 }
 
-.section-line {
-  background-color: palegreen;
-  border-style: double;
-  border-width: 3px;
+.project-headings {
+  text-align: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 200px;
+  line-height: 2;
 }
-
 @media (max-width: 1000px) {
   .hero {
     line-height: 1.2;
   }
   h1 {
     font-size: 70px;
+    line-height: 1.2;
   }
   h2 {
     font-size: 60px;
-
     margin-bottom: 20px;
   }
   h3 {
     font-size: 25px;
     text-align: center;
+    line-height: 1.5;
+  }
+  h4 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 34px;
+    line-height: 1.5;
   }
   .image-column {
     text-align: center;
@@ -103,13 +114,12 @@ button:hover {
     text-align: center;
     padding: 20px;
   }
+  .project-headings {
+    margin: 10px 0;
+  }
   .projects-main-heading {
     font-size: 35px;
     line-height: 1.5;
     padding: 0 20px 0 20px;
-  }
-  .project-headings {
-    text-align: center;
-    margin-bottom: 0;
   }
 }
