--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -121,6 +121,17 @@ nav li a:hover {
   text-align: right;
   margin: 60px 40px;
 }
+footer .social-links {
+  text-align: center;
+  padding: 10px 10px;
+  margin: 20px 20px;
+}
+footer .social-links a {
+  font-size: 40px;
+  margin: 15px;
+  padding: 10px 20px;
+  border-radius: 30px;
+}
 @media (max-width: 1000px) {
   .hero {
     line-height: 1.2;
