--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,14 +28,16 @@ h2 {
   color: var(--primary-color);
   color: var(--heading-color);
 }
-h3 {
+h3,
+.open-source {
   font-family: var(--secondary-font-family);
   color: var(--primary-color);
-  font-size: 34px;
-  color: var(--heading-color);
+  font-size: 30px;
+  line-height: 1.5;
 }
 h4 {
-  font-size: 40px;
+  font-size: 36px;
+  margin-bottom: 20px;
 }
 
 p {
@@ -48,7 +50,7 @@ img {
 }
 strong {
   color: var(--secondary-color);
-  font-size: 35px;
+  font-size: 30px;
 }
 
 .btn-branding {
@@ -132,6 +134,9 @@ nav li a:hover {
 .github {
   color: black;
 }
+.open-source {
+  color: blue;
+}
 footer .social-links {
   text-align: center;
   padding: 10px 10px;
@@ -154,15 +159,17 @@ footer .social-links a {
   h2 {
     font-size: 40px;
   }
-  h3 {
-    font-size: 25px;
+  h3,
+  strong,
+  .open-source {
+    font-size: 20px;
     text-align: center;
     line-height: 1.5;
   }
   h4 {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 34px;
+    font-size: 30px;
     line-height: 1.5;
   }
   nav li {
@@ -223,5 +230,13 @@ footer .social-links a {
   }
   .linkedin.link {
     max-width: 100px;
+  }
+  footer .social-links {
+    text-align: center;
+    padding: 10px 0;
+    margin: 20px 20px;
+  }
+  footer .social-links a {
+    font-size: 25px;
   }
 }
