Updated projects button

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -31,7 +31,7 @@ h2 {
 h3,
 .open-source {
   font-family: var(--secondary-font-family);
-  color: var(--primary-color);
+  color: var(--heading-color);
   font-size: 30px;
   line-height: 1.5;
 }
@@ -51,6 +51,9 @@ img {
 strong {
   color: var(--secondary-color);
   font-size: 30px;
+}
+h3 .developer-text {
+  color: var(--heading-color);
 }
 
 .btn-branding {
