--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -119,7 +119,10 @@ nav li a:hover {
   line-height: 2;
 }
 .contact-info {
-  font-size: 36px;
+  font-size: 30px;
+  color: black;
+  text-align: center;
+  padding: 40px;
 }
 .phone-number {
   margin: 60px 40px;
@@ -231,9 +234,7 @@ footer .social-links a {
   .contact-info {
     text-align: center;
   }
-  .linkedin.link {
-    max-width: 100px;
-  }
+
   footer .social-links {
     text-align: center;
     padding: 10px 0;
