--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -143,10 +143,15 @@ nav li a:hover {
 .open-source {
   color: blue;
 }
+
+footer {
+  margin: 0 232px;
+  border-radius: 10px;
+}
 footer .social-links {
   text-align: center;
   padding: 10px 10px;
-  margin: 20px 20px;
+  margin: 0;
 }
 footer .social-links a {
   font-size: 40px;
@@ -212,7 +217,7 @@ footer .social-links a {
   }
   .definition {
     padding: 20px 20px;
-    margin: 20px;
+    margin: 20px 0;
     text-align: center;
   }
   .about-text {
@@ -234,7 +239,9 @@ footer .social-links a {
   .contact-info {
     text-align: center;
   }
-
+  footer {
+    margin: 0;
+  }
   footer .social-links {
     text-align: center;
     padding: 10px 0;
