--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -245,7 +245,7 @@ footer .social-links a {
   footer .social-links {
     text-align: center;
     padding: 10px 0;
-    margin: 20px 20px;
+    margin: 0 20px;
   }
   footer .social-links a {
     font-size: 25px;
