Updated nav content and improved nav responsive

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,11 +12,28 @@
   --primary-font-family: "Fjalla One", sans-serif;
   --secondary-font-family: "Rubik", sans-serif;
 }
+.first-section {
+  background: var(--background-color);
+  text-align: center;
+}
+nav {
+  padding: 20px 0 0;
+}
+
+.nav-heading a {
+  color: var(--heading-color);
+  font-size: 24px;
+  line-height: 2;
+  margin: 60px;
+}
+a.active {
+  color: var(--secondary-color);
+}
 
 h1 {
   font-family: var(--heading-font-family);
   font-size: 76px;
-  margin: 0 0 8px;
+  margin: 0;
   color: var(--heading-color);
   line-height: 1.2;
 }
@@ -39,6 +56,7 @@ h3 {
 .phone-number {
   font-size: 24px;
   color: var(--linkedin-color);
+  opacity: 1;
 }
 
 .info-link:hover {
@@ -52,7 +70,9 @@ h4 {
   font-size: 34px;
   margin-bottom: 20px;
 }
-
+nav hr {
+  color: var(--heading-color);
+}
 p {
   line-height: 2;
   display: flex;
@@ -85,43 +105,11 @@ h3 .developer-text {
 }
 a {
   text-decoration: none;
-  color: var(--secondary-color);
-}
-nav {
-  color: var(--heading-color);
-  font-size: 35px;
-  margin: 0;
-  padding: 40px 0 0;
-}
-nav ul {
-  margin: 0;
-  padding: 0 0;
 }
 
-.active {
-  color: var(--secondary-color);
-}
-
-.first-section {
-  background: var(--background-color);
-}
 .hero {
   padding: 100px 20px;
   text-align: center;
-}
-
-nav li {
-  display: inline;
-  margin: 40px;
-}
-nav li a {
-  color: #fbf2d5;
-}
-nav li a:hover {
-  color: var(--secondary-color);
-}
-.heading-name {
-  margin-right: 300px;
 }
 
 .projects-main-heading {
@@ -137,10 +125,11 @@ nav li a:hover {
 }
 .contact-info {
   display: block;
-  margin: 0;
-  font-size: 30px;
+  margin: 20px 20px;
+  font-size: 35px;
   color: black;
   text-align: center;
+  padding: 0 10px;
 }
 .contact-info-inner {
   padding: 30px;
@@ -148,8 +137,10 @@ nav li a:hover {
 .portfolio-project {
   text-align: center;
   font-style: italic;
-  font-size: 24px;
+  font-size: 20px;
+  opacity: 0.7;
 }
+
 .github {
   color: var(--linkedin-color);
   font-size: 22px;
@@ -170,11 +161,16 @@ footer .social-links a {
   border-radius: 30px;
 }
 @media (max-width: 1000px) {
+  .nav-heading a {
+    font-size: 20px;
+    margin: 10px;
+  }
   .hero {
     line-height: 1.2;
+    margin: 0;
   }
   h1 {
-    font-size: 50px;
+    font-size: 40px;
     line-height: 1.2;
   }
   h2 {
@@ -182,11 +178,14 @@ footer .social-links a {
   }
   h3,
   strong,
-  .info-link {
+  .info-link,
+  .phone-number {
     font-size: 20px;
     text-align: center;
     line-height: 1.5;
+    opacity: 1;
   }
+
   li {
     text-decoration: none;
   }
@@ -194,25 +193,10 @@ footer .social-links a {
   h4 {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 30px;
+    font-size: 28px;
     line-height: 1.5;
   }
 
-  nav li {
-    display: inline;
-    margin: 10px;
-  }
-
-  nav li a {
-    font-size: 20px;
-    line-height: 2;
-    padding: 0;
-  }
-  nav ul {
-    padding: 0;
-    margin: 0;
-    text-align: center;
-  }
   .hero {
     padding: 40px 20px;
   }
@@ -249,6 +233,7 @@ footer .social-links a {
   }
 
   .project-headings {
+    font-size: 18px;
     margin: 0;
     padding: 0 20px;
   }
@@ -270,6 +255,7 @@ footer .social-links a {
   .portfolio-project a {
     font-size: 16px;
   }
+
   footer {
     margin: 0;
   }
@@ -280,5 +266,8 @@ footer .social-links a {
   }
   footer .social-links a {
     font-size: 25px;
+  }
+  li {
+    list-style: inside;
   }
 }
